--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Mon premier site pour me plaindre hihi</title>
     </head>
     <body>
-        je veux faire caca
+        <h1>je veux faire caca</h1>
     </body>
 
 </html>
