--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
         <title>Mon premier site pour me plaindre hihi</title>
     </head>
     <body>
-        <h1>je veux faire caca</h1>
+        <h1>J'ai fait caca</h1>
+        <img src="img/caca.png">
     </body>
 
 </html>
