diavolo image added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <body>
         <h1>J'ai fait caca</h1>
         <img src="img/caca.png">
+        <img src="img/diavolo.png">
+
     </body>
 
 </html>
