--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
         <h1>J'ai fait caca</h1>
         <img src="img/caca.png">
         <img src="img/diavolo.png">
+        <video controls width="250">
+          
+            <source src="Dragon Ball Z - Lying From You (Linkin Park).mp4" type="video/mp4" />
+          
+           <p Download the
+            <a href="Dragon Ball Z - Lying From You (Linkin Park).mp4">WEBM</a>
+            video.
+        </p>
+          </video>
 
     </body>
 
