[ADD] new picture from link of albert school

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <h1>J'ai fait caca</h1>
         <img src="img/caca.png">
         <img src="img/diavolo.png">
-
+        <img src="https://albertlearning.blackboard.com/bbcswebdav/xid-11470_1">
     </body>
 
 </html>
