--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Mon premier site pour me plaindre hihi</title>
     </head>
     <body>
-        <h1>J'ai fait caca</h1>
+        <h1>J'ai faimmm</h1>
         <img src="img/caca.png">
         <img src="img/diavolo.png">
 
@@ -16,7 +16,7 @@
             video.
         </p>
           </video>
-
+        <h2>J'ai faimmm</h2>
 
         <img src="https://albertlearning.blackboard.com/bbcswebdav/xid-11470_1">
 
