--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Mon premier site pour me plaindre hihi</title>
     </head>
     <body>
-        <h1>J'ai faimmm</h1>
+        <h1>J'ai faimmm pas du tout</h1>
         <img src="img/caca.png">
         <img src="img/diavolo.png">
 
